# reaction-diffusion

./: .gitignore  CMakeLists.txt  README
include/: buffer.h  display.h
src/: buffer.cpp  display.cpp  laplace.nasm  laplace.s  main.cpp
